objects/Case_Feedback__c.object
<CustomObject>
    <description>Used for reviews of case quality</description>
    <fields>
        <fullName>Article_Review_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Article Review Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Base_Case_Score__c</fullName>
        <description>Case score without percentage</description>
        <formula>Total_Correct__c/ Total_Eligable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Case score without percentage</inlineHelpText>
        <label>Base Case Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Score__c</fullName>
        <formula>Total_Correct__c/ Total_Eligable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Score</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <description>Case this feedback is for</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Feedback</relationshipLabel>
        <relationshipName>Case_Feedback</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Clearly_Out__c</fullName>
        <inlineHelpText>Does the subject and description clearly outline the problem?</inlineHelpText>
        <label>Clearly Outlines the Problem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_NA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_confirmed_ok_to_close__c</fullName>
        <inlineHelpText>Did the client confirm the case was ok to close?  3x5 rule</inlineHelpText>
        <label>Client confirmed ok to close</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_NA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consistent_timely_updates_follow_up__c</fullName>
        <inlineHelpText>Was there consistent, timely updates and follow ups recorded in the comments?</inlineHelpText>
        <label>Clear, timely and consistant updates</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_NA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contains_Searchable_Terms_Keywords__c</fullName>
        <inlineHelpText>The subject and description of the case has searchable keywords making it easy to understand at a glance</inlineHelpText>
        <label>Contains Searchable Terms &amp; Keywords</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Reviewed__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <inlineHelpText>Date of review</inlineHelpText>
        <label>Date Reviewed</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Feedback_Details__c</fullName>
        <label>Feedback Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Milestones_accurately_captured_noted__c</fullName>
        <inlineHelpText>Was the milestones accurately captured and noted?</inlineHelpText>
        <label>Milestones accurately captured &amp; noted</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_NA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outline_of_steps_to_get_given_error__c</fullName>
        <inlineHelpText>Is there an outline of steps to reproduce the given error?</inlineHelpText>
        <label>Outline of steps to get given error</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_NA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proper_article_associated__c</fullName>
        <inlineHelpText>Was the proper article attached, modified or authored?</inlineHelpText>
        <label>Proper article associated</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_NA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Screenshots__c</fullName>
        <inlineHelpText>Are screenshots included?</inlineHelpText>
        <label>Screenshots</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_NA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_expected_vs_actual_results__c</fullName>
        <inlineHelpText>Is the expected result stated as well as the actual result?</inlineHelpText>
        <label>State expected vs actual results</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_NA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Correct__c</fullName>
        <description>Adds weights and adds all yes answers</description>
        <formula>CASE( Clearly_Out__c, &quot;Yes&quot;, 10, &quot;No&quot;, 0, &quot;N/A&quot;, 0,0) + 
CASE( Client_confirmed_ok_to_close__c, &quot;Yes&quot;, 5, &quot;No&quot;, 0, &quot;N/A&quot;, 0,0) + 
CASE( Consistent_timely_updates_follow_up__c , &quot;Yes&quot;, 10, &quot;No&quot;, 0, &quot;N/A&quot;, 0,0) + 
CASE( Contains_Searchable_Terms_Keywords__c , &quot;Yes&quot;, 10, &quot;No&quot;, 0, &quot;N/A&quot;, 0,0) + 
CASE( Milestones_accurately_captured_noted__c , &quot;Yes&quot;, 10, &quot;No&quot;, 0, &quot;N/A&quot;, 0,0) + 
CASE( Outline_of_steps_to_get_given_error__c , &quot;Yes&quot;, 7.5, &quot;No&quot;, 0, &quot;N/A&quot;, 0,0) + 
CASE( Proper_article_associated__c , &quot;Yes&quot;, 25, &quot;No&quot;, 0, &quot;N/A&quot;, 0,0) + 
CASE( Screenshots__c , &quot;Yes&quot;, 5, &quot;No&quot;, 0, &quot;N/A&quot;, 0,0) + 
CASE( State_expected_vs_actual_results__c , &quot;Yes&quot;, 7.5, &quot;No&quot;, 0, &quot;N/A&quot;, 0,0) + 
CASE( Updates_are_provided_to_clients__c , &quot;Yes&quot;, 10, &quot;No&quot;, 0, &quot;N/A&quot;, 0,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Adds weights and adds all yes answers</inlineHelpText>
        <label>Total Correct</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Eligable__c</fullName>
        <description>Adds weights and counts Yes/No answers</description>
        <formula>CASE( Clearly_Out__c, &quot;Yes&quot;, 10, &quot;No&quot;, 10, &quot;N/A&quot;, 0,0) +
CASE(  Client_confirmed_ok_to_close__c, &quot;Yes&quot;, 5, &quot;No&quot;, 5, &quot;N/A&quot;, 0,0) +
CASE(  Consistent_timely_updates_follow_up__c , &quot;Yes&quot;, 10, &quot;No&quot;, 10, &quot;N/A&quot;, 0,0) +
CASE(  Contains_Searchable_Terms_Keywords__c , &quot;Yes&quot;, 10, &quot;No&quot;, 10, &quot;N/A&quot;, 0,0) +
CASE(  Milestones_accurately_captured_noted__c , &quot;Yes&quot;, 10, &quot;No&quot;, 10, &quot;N/A&quot;, 0,0) +
CASE(  Outline_of_steps_to_get_given_error__c , &quot;Yes&quot;, 7.5, &quot;No&quot;, 7.5, &quot;N/A&quot;, 0,0) +
CASE(  Proper_article_associated__c , &quot;Yes&quot;, 25, &quot;No&quot;, 25, &quot;N/A&quot;, 0,0) +
CASE(  Screenshots__c , &quot;Yes&quot;, 5, &quot;No&quot;, 5, &quot;N/A&quot;, 0,0) + 
CASE(  State_expected_vs_actual_results__c , &quot;Yes&quot;, 7.5, &quot;No&quot;, 7.5, &quot;N/A&quot;, 0,0) +
CASE(  Updates_are_provided_to_clients__c , &quot;Yes&quot;, 10, &quot;No&quot;, 10, &quot;N/A&quot;, 0,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Adds weights and counts Yes/No answers</inlineHelpText>
        <label>Total Eligable</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Updates_are_provided_to_clients__c</fullName>
        <inlineHelpText>Were updates provided to clients within the SLA/SLO</inlineHelpText>
        <label>Updates are provided to clients</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_NA</valueSetName>
        </valueSet>
    </fields>
    <label>Case Feedback</label>
    <nameField>
        <displayFormat>CF-{0000}</displayFormat>
        <label>Case Feedback Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Feedback</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>